--- a/Home Advanced/.project
+++ b/Home Advanced/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Home Advanced</name>
+	<name>Adv01</name>
 	<comment></comment>
 	<projects>
 	</projects>
