--- a/Adv04_using_Simple_Selects/.project
+++ b/Adv04_using_Simple_Selects/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Adv03</name>
+	<name>Adv04_using_Simple_Selects</name>
 	<comment></comment>
 	<projects>
 	</projects>
