--- a/Adv14_using_Pagination/src/main/resources/application.properties
+++ b/Adv14_using_Pagination/src/main/resources/application.properties
@@ -1,8 +1,10 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/devjava5
-spring.datasource.username=postgres
-spring.datasource.password=1987
+spring.datasource.url=jdbc:mysql://localhost:3306/devjava5?useUnicode=true&characterEncoding=utf-8&useSSL=false
+spring.datasource.username=root
+spring.datasource.password=1111
 spring.datasource.hikari.connection-timeout=60000
 spring.datasource.hikari.maximum-pool-size=5
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.javax.persistence.validation.mode=none
 spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
