--- a/Adv15_using_Dynamic_Filtering/src/main/resources/application.properties
+++ b/Adv15_using_Dynamic_Filtering/src/main/resources/application.properties
@@ -8,4 +8,4 @@ spring.jpa.show-sql=true
 spring.jpa.properties.javax.persistence.validation.mode=none
 spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
-file.path=/opt/
+file.path=${user.home}/test/
