--- a/Adv17_using_Cloudinary/src/main/resources/application.properties
+++ b/Adv17_using_Cloudinary/src/main/resources/application.properties
@@ -9,3 +9,5 @@ spring.jpa.properties.javax.persistence.validation.mode=none
 spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
 file.path=${user.home}/
+#cloudinary.url=${CLOUDINARY_URL}
+cloudinary.url=cloudinary://586222771451182:PonTilBATnfz9KBBhUkgulzmemE@hd4ylyjwf
